refactor: Sonar Qube 에 있는 code smell 조금 줄여 봤습니다. (#399)